--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+h1,
+h2 {
+  font-family: 'Roboto', Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 500;
+}
+
 .light {
   transition: 0.5s;
   background-color: white;
@@ -11,13 +17,16 @@
 }
 
 .light-button {
+  font-family: 'Roboto', Verdana, Geneva, Tahoma, sans-serif;
   transition: 0.5s;
-  border-radius: 8px;
+  border-radius: 4px;
   background-color: rgb(235, 235, 235);
   color: black;
+  padding: 0.5em;
 }
 
 .dark-button {
+  font-family: 'Roboto', Verdana, Geneva, Tahoma, sans-serif;
   transition: 0.5s;
   border-radius: 8px;
   background-color: rgb(45, 36, 58);
