--- a/style.css
+++ b/style.css
@@ -18,19 +18,18 @@ h2 {
 
 .light-button {
   font-family: 'Roboto', Verdana, Geneva, Tahoma, sans-serif;
-  transition: 0.5s;
   border-radius: 4px;
-  background-color: rgb(235, 235, 235);
+  background-color: rgb(197, 198, 255);
   color: black;
   padding: 0.5em;
 }
 
 .dark-button {
   font-family: 'Roboto', Verdana, Geneva, Tahoma, sans-serif;
-  transition: 0.5s;
-  border-radius: 8px;
+  border-radius: 4px;
   background-color: rgb(45, 36, 58);
   color: white;
+  padding: 0.5em
 }
 
 .result-red {
