--- a/slides/slides.css
+++ b/slides/slides.css
@@ -2,6 +2,15 @@
   color: red
 }
 
+.red-heart {
+  color: red;
+  font-size: 80px;
+}
+
 .green {
   color: green
+}
+
+h1 {
+  text-transform: none !important
 }
