--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 h1,
-h2 {
+h2,
+p,
+label {
   font-family: 'Roboto', Verdana, Geneva, Tahoma, sans-serif;
   font-weight: 500;
 }
@@ -18,7 +20,7 @@ h2 {
 
 .light-button {
   font-family: 'Roboto', Verdana, Geneva, Tahoma, sans-serif;
-  border-radius: 4px;
+  border-radius: 16px;
   background-color: rgb(197, 198, 255);
   color: black;
   padding: 0.5em;
@@ -26,7 +28,7 @@ h2 {
 
 .dark-button {
   font-family: 'Roboto', Verdana, Geneva, Tahoma, sans-serif;
-  border-radius: 4px;
+  border-radius: 16px;
   background-color: rgb(45, 36, 58);
   color: white;
   padding: 0.5em
@@ -36,7 +38,7 @@ h2 {
   color: red;
 }
 
-.result-yellow {
+.result-yellow #resultText {
   color: yellow;
   text-shadow: 0px 0px 5px black;
 }
